--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.3",
     "lucide-react": "^0.469.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.20",
     "next-themes": "^0.4.4",
     "react": "^18",
