--- a/package.json
+++ b/package.json
@@ -12,17 +12,32 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@shikijs/compat": "^1.26.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.16.3",
+    "i": "^0.3.7",
     "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.20",
+    "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
+    "npm": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-wrap-balancer": "^1.1.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-prism-plus": "^2.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-code-import": "^1.2.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unist-builder": "^4.0.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
