--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier src/ --write"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@shikijs/compat": "^1.26.1",
     "class-variance-authority": "^0.7.1",
@@ -20,11 +21,13 @@
     "framer-motion": "^11.16.3",
     "i": "^0.3.7",
     "lucide-react": "^0.469.0",
+    "mdast-util-toc": "^7.1.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.20",
     "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
     "npm": "^11.0.0",
+    "posthog-js": "^1.205.0",
     "react": "^18",
     "react-dom": "^18",
     "react-wrap-balancer": "^1.1.1",
@@ -32,6 +35,7 @@
     "rehype-pretty-code": "^0.14.0",
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
     "remark-code-import": "^1.2.0",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
