--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "format": "prettier src/ --write"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@shikijs/compat": "^1.26.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
